dist/js/test/errors/test.InvalidNonce.js
"use strict";const e=require("ololog"),n=(require("ansicolor").nice,require("chai")),t=require("../../../ccxt.js");n.expect,n.assert;module.exports=(async(n,r)=>{e.green("AuthenticationError (bad nonce) test...");const a=n.has.fetchBalance,c=n.has.fetchMyTrades,o=n.has.fetchOrders;if(a||c||o){const o=n.nonce;n.nonce=(()=>1);try{a?await n.fetchBalance():c?await n.fetchMyTrades(r,0):await n.fetchOrders(r),n.nonce=o,e.warn(n.id+": AuthenticationError: bad nonce swallowed")}catch(r){if(n.nonce=o,!(r instanceof t.AuthenticationError||r instanceof t.InvalidNonce))throw r;e.green("AuthenticationError test passed")}}else e(n.id+" has no means of testing for bad nonce")});
//# sourceMappingURL=test.InvalidNonce.js.map